2001-04-09  Akim Demaille  <akim@epita.fr>

	* automake.in (&make_paragraphs): Transform TOPDIR_P and TOPDIR.
	(&handle_dist): Don't.
	(&handle_clean): Don't handle config.status here, let...
	* clean.am: ... do it.
	* distdir.am: Adjust.

2001-04-09  Akim Demaille  <akim@epita.fr>

	* automake.in: Use strict vars and subs.
	Declare `%require_file_found'.
	(&handle_source_transform, &make_paragraphs): Declare my variables.

2001-04-09  Akim Demaille  <akim@epita.fr>

	* data.am, header.am, java.am, libs.am, lisp.am, ltlib.am,
	* progs.am, python.am: Use if/endif instead of ?INSTALL?.
	* java.am (_am_installdirs): Be sure to set it.

2001-04-09  Akim Demaille  <akim@epita.fr>

	* automake.in (&make_condition): Return '#' when FALSE.
	(&conditional_string): Return FALSE, not '#' in the corresponding
	cases.
	(&file_contents_internal): Adjust.
	(&check_variable_defined_unconditional): Dump the guilty variable.

2001-04-09  Akim Demaille  <akim@epita.fr>

	* distdir.am: Use and abuse of if/endif.
	* scripts.am: Using if/endif with variables is fine.

2001-04-09  Akim Demaille  <akim@epita.fr>

	* automake.in (&make_paragraphs):  Extract from &file_contents.
	Make it more robust than the previous RE based scheme.
	(&file_contents): Use it.

2001-04-09  Akim Demaille  <akim@epita.fr>

	* automake.in (&make_paragraphs):  Extract from &file_contents.
	Make it more robust than the previous RE based scheme.
	(&file_contents): Use it.

2001-04-09  Akim Demaille  <akim@epita.fr>

	* tests/yacc2.test: Don't define several times a variable, as
	automake complains.

2001-04-09  Akim Demaille  <akim@epita.fr>

	* automake.in (&handle_source_transform): Fix pr72: don't define
	$linker if there are no @files.

2001-04-09  Akim Demaille  <akim@epita.fr>

	Avoid reading twice header-vars.am as now macro_define
	complains.

	* automake.in (&define_standard_variables): Don't output the
	variables.
	(&read_main_am_file): Output first user variables, then Automake
	variables.