@@ -16,7 +16,7 @@ distdir.am footer.am header-vars.am header.am install.am java.am  \
 kr-extra.am library.am libs.am libtool.am lisp.am ltlib.am	  \
 ltlibrary.am mans-vars.am mans.am multilib.am program.am progs.am \
 python.am remake-hdr.am remake.am scripts.am subdirs.am tags.am	  \
-texi-vers.am texibuild.am texinfos.am
+texi-vers.am texibuild.am texinfos.am yacc.am
 
 dist_pkgdata_DATA = COPYING INSTALL texinfo.tex ansi2knr.c ansi2knr.1 \
 $(amfiles)
