@@ -1,5 +1,14 @@
 2001-04-09  Akim Demaille  <akim@epita.fr>
 
+	* automake.in (&condition_negate): New.
+	(&variable_conditions_permutations): Use it.
+	(&read_am_file, &file_contents): Use it on `else' clauses to
+	support `if FALSE'.
+	(&output_yacc_build_rule): Output this...
+	* yacc.am: New file.
+
+2001-04-09  Akim Demaille  <akim@epita.fr>
+
 	* automake.in (&make_paragraphs): Transform TOPDIR_P and TOPDIR.
 	(&handle_dist): Don't.
 	(&handle_clean): Don't handle config.status here, let...
